Attempt to prevent background scroll on mobile when chat is open

--- a/src/app/elements/chatbot/chatbot.component.scss
+++ b/src/app/elements/chatbot/chatbot.component.scss
@@ -98,12 +98,16 @@
     right: 16px;
   }
 
-  .chat-panel {
-    position: fixed;
+  :host:has(.chat-panel) {
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .chat-panel {
     width: 100%;
     max-width: 100%;
     height: 100dvh;
